# polymarket-arb

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  SETUP.md  SETUP_COMPLETE.md  TROUBLESHOOTING.md
monitoring/: docker-compose.monitoring.yml  grafana-dashboard.json  prometheus.yml
monitoring/alerts/: polymarket-arb.yml
monitoring/grafana-provisioning/dashboards/: dashboards.yml
monitoring/grafana-provisioning/datasources/: datasources.yml
scripts/: backup-config.sh  benchmark.sh  health-check.sh  tune-system.sh
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/arbitrage/: calculator.rs  detector.rs  executor.rs  mod.rs
src/market/: client.rs  discovery.rs  mock.rs  mod.rs  types.rs
src/orderbook/: aggregator.rs  mod.rs  types.rs  websocket.rs
src/signing/: mod.rs
src/trading/: execution.rs  mod.rs  order.rs  position.rs
src/utils/: mod.rs  shutdown.rs
tests/integration/: mod.rs
