[package]
name = "polymarket_arb"
version = "0.1.0"
edition = "2021"
description = "BTC 15-minute Polymarket arbitrage bot in Rust"
license = "MIT"
authors = ["Your Name"]

[dependencies]
# Decimal arithmetic - NEVER use f64 for money
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.36"

# Async runtime
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"
async-stream = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
envy = "0.4"
dotenvy = "0.15"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging/Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# OpenAPI documentation
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum"] }

# Concurrent data structures
dashmap = "6.1"

# Enum utilities
strum = { version = "0.26", features = ["derive"] }

# Date/Time
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# Crypto/Signing for Polymarket
alloy = { version = "1.3", features = ["signers", "signer-local"] }
hex = "0.4"

# Polymarket SDK
polymarket-client-sdk = { version = "0.4", features = ["clob", "data", "gamma", "tracing"] }

# Date/Time (for timestamps in execution)
chrono = "0.4"

# URL handling
url = "2.5"

# Regex for parsing
regex = "1.11"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "polymarket-arb"
path = "src/main.rs"

[lib]
name = "polymarket_arb"
path = "src/lib.rs"
